# HatenaToyBox

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pr-check.yml
scripts/: build_licenses_file.bat  parse_licenses.py
src/: debug_app.py  main.py
src/common/: __init__.py
src/common/base_model/: __init__.py  base_config.py  base_event.py  base_service.py
src/common/core/: __init__.py  event_publisher.py  hub.py  service_caller.py
src/common/core/controller/: __init__.py  base_controller.py  event_controller.py  exceptions.py  service_controller.py
src/common/feature/: __init__.py  feature.py  set_config_service.py
src/features/: feature_manager.py
src/features/auto_interception/: __init__.py  auto_interception.py  config.py
src/features/clip_notificator/: __init__.py  clip_notificator.py  config.py
src/features/communicator/: client_manager.py  communicator.py  config.py  constants.py  update_detector.py
src/features/communicator/token_manager/: __init__.py  client.py  constants.py  exceptions.py  responses.py  token_manager.py  twitch_token.py
src/features/communicator/twitchio_adaptor/: __init__.py  base_twitch_client.py  custom_commands.py  exceptions.py  stream_info_manager.py  twitch_client.py
src/features/communicator/twitchio_adaptor/utils/: __init__.py  cast_message.py  cast_user.py  twitchio_models.py
src/features/configuration_manager/: __init__.py  config.py  configuration_manager.py
src/features/door_bell/: __init__.py  config.py  door_bell.py
src/features/message_filter/: __init__.py  config.py  message_filter.py
src/features/message_translator/: __init__.py  config.py  message_translator.py
src/features/message_translator/language_identification/: __init__.py  identifier_adaptor.py  japanese_identifier.py
src/features/message_translator/translator_adaptor/: __init__.py  cache.py  deepl_translator.py  google_translator.py  translator_adaptor.py  translator_config.py
src/features/periodic_announce/: __init__.py  announcement_task.py  config.py  periodic_announce.py
src/features/sound_player/: __init__.py  config.py  sound_player.py
src/schemas/: enums.py  errors.py  events.py  models.py  services.py
src/utils/: model_file.py  process_manager.py  resizable_queue.py
src/utils/routines/: __init__.py  __init__.pyi  routine_manager.py
src/views/: connection_view.py  constants.py  header.py  main_view.py  router.py  setting_view.py
src/views/controls/: activity_control.py  color_dropdown.py  connection_indicator.py  file_picker_row.py  message_format_row.py  time_line.py  volume_slider_row.py
test/: conftest.py  constants.py  test_sample.py
test/common/core/: test_event_publisher.py  test_hub.py  test_service_caller.py
test/common/core/controller/: test_event_contorller.py  test_service_controller.py
test/common/feature/: test_feature.py
test/features/: constants.py  test_auto_interception.py  test_clip_notificator.py  test_door_bell.py  test_feature_manager.py  test_message_filter.py
test/features/auto_interception/: test_auto_interception.py
test/features/clip_notificator.py/: test_clip_notificator.py
test/features/communicator/: test_client_manager.py  test_communicator.py  test_update_detector.py
test/features/communicator/token_manager/: test_client.py  test_token_manager.py
test/features/communicator/twitchio_adaptor/: test_base_twitch_client.py  test_cast_message.py  test_stream_info_manager.py  test_twitch_client.py
test/features/configuration_manager/: test_configuration_manager.py
test/features/door_bell/: test_door_bell.py
test/features/message_filter/: test_message_filter.py
test/features/message_translator/: test_message_translator.py
test/features/message_translator/language_identifier/: test_japanese_identifier.py
test/features/message_translator/translator_adaptor/: test_cache.py  test_deepl_translator.py  test_google_translator.py  test_translator_adaptor.py
test/features/periodic_announce/: test_periodic_announce.py
test/features/sound_player/: test_sound_player.py
test/schemas/: test_errors.py
test/utils/: test_model_file.py  test_process_manager.py  test_resizable_queue.py  test_routine_manager.py
