[project]
name = "HatenaToyBox"
version = "0.1.0"
description = "Tools for Twitch streamers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepl-py>=1.0.3",
    "gpytranslate>=2.0.0",
    "playsound3>=2.5.2",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "shelved-cache>=0.4.0",
    "twitchio",
]
license = { file = "LICENSE" }
authors = [{ name = "Nanahuse" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.urls]
Homepage = "https://github.com/Nanahuse/HatenaToyBox"


[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
    "types-cachetools>=5.5.0.20240820",
    "mypy>=1.15.0",
    "pytest-cov>=6.1.1",
]

[tool.uv.sources]
twitchio = { git = "https://github.com/Nanahuse/TwitchIO.git", rev = "feature/add_tags_to_modify_stream" }


[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = ["FIX002", "S101", "TRY300", "COM812", "D", "TD"]
lint.fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"test/*" = ["INP001", "SLF001", "PLR2004"]


[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = [
    "ignore:Inheritance class EventSubClient from web.Application is discouraged:DeprecationWarning",
]
asyncio_default_fixture_loop_scope = "function"
addopts = ["--cov=src", "--cov-report=term", "--cov-fail-under=99"]

[tool.coverage.run]
omit = ["app.py"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
